--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,12 @@
 }
 
 .btn-platzi{
-background-color:#97c93e;
-color:white;
+  background-color:#97c93e;
+  color:white;
 }
 
 .btn-platzi:hover{
-background-color: #82ad36;
+  background-color: #82ad36;
 
 }
 
@@ -40,8 +40,17 @@ background-color: #82ad36;
 #carousel .overlay .container,
 #carousel .overlay .row
 {
-height: 100%;
+  height: 100%;
 }
+
+#place-time img {
+  max-width: 100%;
+}
+#place-time{
+  background-color: #273b47;
+  color: white;
+}
+
 
 
 #footer{
@@ -50,4 +59,20 @@ height: 100%;
 
 #footer a{
   color: #FFFFFF;
+}
+.card-img-top{
+  height: 400px;
+  object-fit: cover;
+}
+.badge-react{
+  background-color: black;
+  color: white;
+}
+.btn-platzi{
+  background-color:#97c93e;
+  color:white;
+}
+.tooltip{
+
+  background-color: red;
 }
